--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@types/mocha": "^2.2.32",
     "@types/node": "^6.0.43",
     "@types/sinon": "^1.16.31",
-    "@types/ws": "0.0.34",
+    "@types/ws": "^3.2.1",
     "chai": "^3.5.0",
     "chrome-remote-debug-protocol": "^1.0.1",
     "coveralls": "^2.11.11",
@@ -53,6 +53,6 @@
     "sinon": "^1.17.4",
     "tslint": "^3.15.1",
     "typescript": "^2.0.3",
-    "ws": "^1.1.1"
+    "ws": "^3.3.2"
   }
 }
