--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/ws": "^3.2.1",
     "chai": "^3.5.0",
     "chrome-remote-debug-protocol": "^1.0.1",
+    "devtools-protocol": "0.0.555290",
     "coveralls": "^2.11.11",
     "istanbul": "^0.4.5",
     "mocha": "^2.5.3",
